Implemented add challenge command and fix some